Fixed spacing around alert in header.

--- a/src/sass/messaging/partials/_messaging-app.scss
+++ b/src/sass/messaging/partials/_messaging-app.scss
@@ -12,6 +12,10 @@
   @media (max-width: $medium-screen) {
     padding: 0 1.5rem;
   }
+
+  .va-alert {
+    margin: 0 0 1.5rem;
+  }
 }
 
 .messaging-compose-button {
